--- a/style.css
+++ b/style.css
@@ -1,8 +1,123 @@
-#app {
-  font-family: Avenir, Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-align: center;
-  color: #2c3e50;
-  margin-top: 60px;
+*, *::after, *::before {
+  box-sizing: border-box;
+}
+
+body {
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  display: grid;
+  align-items: center;
+  place-content: space-between center;
+  background: linear-gradient(#e66465, #9198e5);
+  font-family: Arial, Helvetica, sans-serif;
+  padding-bottom: 20px;
+}
+
+h1 {
+  font-size: 3rem;
+  margin: 20px;
+  color: #FFF;
+  text-shadow: 1px 1px 1px #000;
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  font-size: 2rem;
+}
+
+.container.clock {
+  background-color: #222;
+  padding: 10px;
+  display: inline-flex;
+  color: #AAA;
+  border: 1px solid #AAA;
+  border-radius: 5px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.container.clock .off {
+  color: rgba(0, 0, 0, 0.2);
+}
+
+.container.clock span {
+  padding-left: 10px;
+  font-size: .8rem;
+}
+
+.example-section {
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 10px 20px auto;
+  max-width: 800px;
+  min-width: 600px;
+  border: 1px solid #ccc;
+  padding: 20px;
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.7);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
+}
+
+.example-section h2 {
+  font-size: 1.5rem;
+  margin: 0 0 10px;
+}
+
+ul {
+  list-style: none;
+  padding: 0.5rem;
+  margin: 0;
+  border: 1px solid #ccc;
+  background-color: rgba(255, 255, 255, 0.7);
+}
+
+input, button {
+  font-size: 1.5rem;
+  margin-bottom: .5rem;
+  margin-right: .5rem;
+}
+
+.tictactoe-container {
+  display: inline-block;
+  border: 2px solid #555;
+  border-radius: 7px;
+  background-color: #FFF;
+  padding: 20px;
+}
+
+.tictactoe {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
+  width: 300px;
+  margin: 20px;
+  position: relative;
+}
+
+.tictactoe::before {
+  content: '';
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  inset: 0;
+  background-color: #555;
+}
+
+.tictactoe .square {
+  background-color: #FFF;
+  height: 100px;
+  color: #000;
+  font-weight: extra-bold;
+  font-size: 4rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  z-index: 2;
+}
+
+.tictactoe-container .turn, .tictactoe-container .winner {
+  font-weight: bold;
+  font-size: 1.5rem;
 }
